# mandelbrot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mandelbrot.c
libfractal/: CMakeLists.txt  display.c  display.h  fractal.c  fractal.h  gpu.c  gpu.h  math.c  math.h  types.h
